# pygeoipupdate

./: .gitignore  CLAUDE.md  HISTORY.rst  README.md  lychee.toml  mise.toml  pyproject.toml
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
src/geoipupdate/: __init__.py  _defaults.py  _file_lock.py  _file_writer.py  cli.py  client.py  config.py  errors.py  models.py  updater.py
src/pygeoipupdate/: __init__.py  _defaults.py  _file_lock.py  _file_writer.py  _utils.py  cli.py  client.py  config.py  errors.py  models.py  updater.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_file_operations.py  test_models.py  test_updater.py
