[project]
name = "pygeoipupdate"
version = "0.1.0"
description = "MaxMind GeoIP database updater"
authors = [
    {name = "Gregory Oschwald", email = "goschwald@maxmind.com"},
]
dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
    "click>=8.0.0,<9.0.0",
    "filelock>=3.12.0,<4.0.0",
    "tenacity>=8.2.0,<10.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE-*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: System :: Software Distribution",
]

[project.scripts]
pygeoipupdate = "pygeoipupdate.cli:main"

[project.urls]
Homepage = "https://www.maxmind.com/"
"Source Code" = "https://github.com/maxmind/pygeoipupdate"
"Issue Tracker" = "https://github.com/maxmind/pygeoipupdate/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.0.5",
    "pytest-httpserver>=1.0.10",
    "tox-uv>=1.29.0",
]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Redundant as the formatter handles missing trailing commas.
    "COM812",

    # documenting magic methods
    "D105",

    # Conflicts with D211
    "D203",

    # Conflicts with D212
    "D213",

    # Magic numbers for HTTP status codes seem ok most of the time.
    "PLR2004",

    # Type checking block suggestions - not always practical
    "TC002",
    "TC003",

    # Exception message style - ok for this project
    "TRY003",
    "EM101",
    "EM102",

    # Boolean positional args are fine for CLI entry points
    "FBT001",

    # Use of pathlib vs os for some operations
    "PTH105",
    "PTH108",

    # contextlib.suppress suggestion - sometimes explicit is clearer
    "SIM105",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "ASYNC240", "D", "S101", "S105", "S324", "E501", "PLC0415", "RUF043", "F841", "SLF001"]
"src/pygeoipupdate/_file_writer.py" = ["S324"]
"src/pygeoipupdate/_file_lock.py" = ["E501"]
# config.py has necessary complexity from porting Go config parsing
"src/pygeoipupdate/config.py" = ["C901", "PLR0912", "PLR0915", "PLW2901", "E501"]
"src/pygeoipupdate/client.py" = ["SIM117"]

[tool.tox]
env_list = [
    "3.11",
    "3.12",
    "3.13",
    "3.14",
    "lint",
]
skip_missing_interpreters = false

[tool.tox.env_run_base]
dependency_groups = [
  "dev",
]
commands = [
    ["pytest", "tests"],
]

[tool.tox.env.lint]
description = "Code linting"
python = "3.14"
dependency_groups = [
    "dev",
    "lint",
]
commands = [
    ["mypy", "src", "tests"],
    ["ruff", "check"],
    ["ruff", "format", "--check", "--diff", "."],
]

[tool.tox.gh.python]
"3.14" = ["3.14", "lint"]
"3.13" = ["3.13"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
